2011-05-08  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* dirlist.c (do_dirlist1, dirlist): better unified source
	(main): options -i and -z

2010-06-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* dirlist.c (main): output now via tino_io
	(set_type): option -t added

2009-06-24  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* dirlist.c (dirlist): stat of files now possible, too

2009-06-16  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* dirlist.c (do_stat): recoursion fixed for -p modes

2008-05-28  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* mvatom.c (do_rename_away, main): Option -c

2008-05-26  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* cmpanddel.sh (unpf): Output bugfix, src/dst interchanged

2008-05-20  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* dirlist.c (main, dirlist): options -0 and -

2008-05-13  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* mvatom.c (do_mvaway): bugfix for option -s and minor resouce
	leakage fixed
	(do_rename_backup, main): m_append (option -a) added

2008-04-26  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* mvatom.c (do_rename_backup): If destination exists output now
	makes more sense.

2007-10-01  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* cmpanddel.sh (unpf): made more readable

2006-10-04    <tino@firebird.03.softkill.net>

	* mvatom.c: tino_va_* routines

2006-09-27    <tino@firebird.03.softkill.net>

	* mvatom.c (do_mvaway): now reads lines
	(do_mkdirs): added for verbose output

2006-08-12    <tino@firebird.03.softkill.net>

	* mvatom.c (main): option -o added
	(read_dest, main): option -l prepared, option -0 disabled

2006-08-01    <tino@firebird.03.softkill.net>

	* mvatom.c (do_rename_backup, main): option -p added