@@ -1,3 +1,7 @@
+2011-11-16  Valentin Hilbig  <tino@firebird.03.softkill.net>
+
+	* dirlist.c (set_type, set_types): negated file types added
+
 2011-05-08  Valentin Hilbig  <tino@firebird.03.softkill.net>
 
 	* dirlist.c (do_dirlist1, dirlist): better unified source
